# silicai-testproject

./: .gitignore  README.md  project.yaml  pyproject.toml  silicai.yaml
circuits/: rp2350a.yaml  tmp117.yaml  tmp117_sensor.yaml
