[project]
name = "silicai-testproject"
version = "0.1.0"
description = "SilicAI test project — TMP117 temperature sensor circuit"
requires-python = ">=3.11"
dependencies = [
    "kiutils>=1.4.8",
    "silicai",
]

[tool.uv.sources]
silicai = { path = "../silicai" }

[tool.silicai]
component_libraries = [
    { path = "../silicai-components" },
]
